[package]
name = "dungeon_crawler"
version = "0.1.0"
edition = "2021"
authors = ["Arjun Myanger"]
description = "A terminal-based roguelike dungeon crawler game"
repository = "https://github.com/amyanger/dungeon_crawler"
license = "MIT"
keywords = ["game", "roguelike", "terminal", "dungeon"]
categories = ["games"]

[dependencies]
crossterm = "0.27"
rand = "0.8"
